sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:5: error: not found: value j
    var v=getValeur(i);j=i-1
                       ^AlgInsertionSort:6: error: not found: value j
    while(j>=0 && getValeur(j-1)>v){
          ^AlgInsertionSort:6: error: not found: value j
    while(j>=0 && getValeur(j-1)>v){
                            ^AlgInsertionSort:7: error: not found: value j
      setValeur(j,getValeur(j-1))
                ^AlgInsertionSort:7: error: not found: value j
      setValeur(j,getValeur(j-1))
                            ^AlgInsertionSort:8: error: not found: value j
      j-=1
      ^AlgInsertionSort:10: error: not found: value j
  setValeur(j,v)  
            ^